--- a/Public/Views/fizeteseloleg.html
+++ b/Public/Views/fizeteseloleg.html
@@ -15,6 +15,11 @@
         <option ng-repeat="item in months" value={{$index}} ng-selected="$index === month">{{item}}</option>
       </select>
     </div>
+
+    <div class="flex flex-col w-full my-1">
+      <label for="day" class="ml-1">Nap</label>
+      <input type="text" name="day" id="day" ng-model="day" class="w-full px-2 py-1 rounded-lg bg-slate-700 outline-none">
+    </div>
     
     <div class="flex flex-col w-full my-1">
       <label for="value" class="ml-1">Fizetési előleg</label>
@@ -34,12 +39,12 @@
     <div class="flex flex-col w-full">
       <div class="flex w-full border-b border-slate-500">
         <div class="text-center text-lg w-1/3">Alkalmazott</div>
-        <div class="text-center text-lg w-1/3">Hónap</div>
+        <div class="text-center text-lg w-1/3">Hónap (nap)</div>
         <div class="text-center text-lg w-1/3">Fizetés előleg (HUF)</div>
       </div>
       <div class="cursor-pointer flex w-full py-1 even:bg-slate-700/30 hover:bg-slate-700/50 transition-colors" ng-repeat="item in fizeteselolegek" ng-click="update(item)">
         <div class="text-center w-1/3">{{item.employee.name}}</div>
-        <div class="text-center w-1/3">{{item.monthName}}</div>
+        <div class="text-center w-1/3">{{item.monthName}} ({{item.day}})</div>
         <div class="text-center w-1/3">{{item.value}}</div>
       </div>
       <div ng-if="fizeteselolegek.length === 0" class="text-center p-6 opacity-50">
